--- a/public/index.html
+++ b/public/index.html
@@ -23,9 +23,7 @@
             <div class="chat-list"></div>
           </div>
         </script>
-        <div class="chat-view">
-          <div class="chat-list"></div>
-        </div>
+        <div class="chat-list" id="chatList"></div>
       </div>
     </div>
     <script type="text/javascript" src="js/app.js?v=1.0.1"></script>
