--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,10 @@
             <div class="chat-list"></div>
           </div>
         </script>
-        <div class="chat-list" id="chatList"></div>
+        <script type="text/template" id="chatList">
+          <div class="chat-list"></div>
+        </script>
+        <div id="chatView"></div>
       </div>
     </div>
     <script type="text/javascript" src="js/app.js?v=1.0.1"></script>
