--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
             <figure>
               <div class="chat-list-item-photo"></div>
             </figure>
-            <div class="chat-list-item-text"></div>
+            <div class="chat-list-item-text">Test Text</div>
             <div class="chat-list-item-actions">
               <button>Reply</button>
             </div>
