--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <title>zr-chat</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="css/app.css?v=1.0.1">
+    <link rel="stylesheet" type="text/css" href="css/app.min.css?v=1.0.1">
     <script type="text/javascript">window.appVersion='1.0.1';</script>
   </head>
   <body>
@@ -40,6 +40,6 @@
         <div id="chatView"></div>
       </div>
     </div>
-    <script type="text/javascript" src="js/app.js?v=1.0.1"></script>
+    <script type="text/javascript" src="js/app.min.js?v=1.0.1"></script>
   </body>
 </html>
